# lily_website

./: .ai_instructions.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .template_install_hash  404.html  BOOKING_ENGINE_V2_PLAN.md  CHANGELOG.md  CHANGELOG_WORKER.md  CLAUDE.md  CONVERSATIONS_VISION.md  IMPLEMENTATION_REPORT.md  MIGRATION_PLAN_V2.md  README-RU.md  README.md  RELEASE_v0.9.0_INSTRUCTIONS.md  RENDER_BLOCKING_OPTIMIZATION.md  REPORT.md  SESSION_REPORT.md  TEMPLATE_IMPROVEMENTS.md  TEST_COVERAGE_ROADMAP.md  TODO_OPTIMIZATION.md  admin_refactoring_plan.md  cabinet_views_coverage.txt  cabinet_views_coverage_utf8.txt  data_dump.json  data_dump_final.json  index.html  make_square_logo.py  project_structure.txt  pyproject.lily_backend.toml  pyproject.toml  pytest-lily.ini  pytest_output.txt  redis-backends-recovery.md  test_django.py
.agents/rules/: graphify.md
.agents/workflows/: graphify.md
.claude/: settings.local.json
.github/workflows/: .gitkeep  README.md  cd-release.yml  ci-develop.yml  ci-main.yml  deploy-production-manual.yml  deploy-production-tag.yml
.run/: check_local.run.xml
1/html_prototype/: 404.html  500.html  brows.html  contacts.html  cosmetology.html  datenschutz.html  depilation.html  hair.html  impressum.html  index.html  massage.html  nails.html  services.html  team.html
1/html_prototype/css/: base.css  layout.css  pages.css
1/html_prototype/ru/: brows.html  contacts.html  cosmetology.html  depilation.html  hair.html  index.html  massage.html  nails.html  services.html  team.html
archive/backend_django/: README.md  conftest.py
archive/backend_django/api/: admin.py  booking.py  promos.py  urls.py
archive/backend_django/core/: apps.py  asgi.py  cache.py  context_processors.py  sitemaps.py  urls.py  views.py  wsgi.py
archive/backend_django/static/: manifest.json  offline.html
archive/backend_django/templates/: 404.html  500.html  llms_en.txt  llms_ru.txt
archive/telegram_bot/: README.md  alembic.ini
archive/telegram_bot/core/: container.py  logger.py  security.py  settings.py
archive/telegram_bot/resources/: constants.py
deploy/: .dockerignore  .env.example  POSTGRES_MIGRATION.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
deploy/backend/: Dockerfile  entrypoint.sh
deploy/bot/: Dockerfile
deploy/lily_backend/: Dockerfile  entrypoint.sh
deploy/monitoring/: config.alloy
deploy/nginx/: Dockerfile  Dockerfile.local  nginx-main.conf  site-local.conf  site.conf  site.conf.template
deploy/scripts/: backup_local_postgres.sh  cutover_local_postgres.sh  download_backup_from_s3.sh  install_postgres_backup_timer.sh  pre_deploy_backup.sh  restore_local_postgres.sh  run_postgres_backup.sh  sync_backup_to_neon.sh  upload_backup_to_s3.sh  verify_local_postgres.sh
deploy/systemd/: lily-postgres-backup.service  lily-postgres-backup.timer
deploy/worker/: Dockerfile
docs/: CHANGELOG_SECURITY.md  CHANGELOG_archive.md  README.md  redis-feature-flag.md
docs/agent-skills/cabinet-feature-change/: SKILL.md
docs/agent-skills/change-triage/: SKILL.md
docs/agent-skills/feature-boundary-decision/: SKILL.md
docs/agent-skills/model-schema-change/: SKILL.md
docs/agent-skills/public-template-change/: SKILL.md
docs/agent-skills/selector-service-discipline/: SKILL.md
docs/agent-skills/static-assets/: SKILL.md
docs/architecture/: README.md
docs/codex_tools/: README.md
docs/codex_tools/en_EN/: README.md
docs/codex_tools/ru_RU/: README.md
docs/design/: 01_identity.md  02_layout_navigation.md  03_ui_components.md  04_page_flow.md  05_content_map.md  06_booking_flow.md  07_future_ideas.md  README.md
docs/dev/: reports_v052_migration.md
docs/dev/messaging_migration/: 00_summary.md  01_compose_new_email_fix.md  02_settings_extraction.md  03_features_rename.md  04_workers_alignment.md  05_phase_plan.md  06_verification.md
docs/en_EN/: GETTING_STARTED.md  global_roadmap.md
docs/en_EN/architecture/: README.md  tech_stack.md
docs/en_EN/design/: README.md  booking_flow.md  content_map.md  development_principles.md  future_ideas.md  identity.md  layout_navigation.md  page_flow.md  (+1 more)
docs/i18n_refactoring/: README.md  content_to_db.md  group_buttons.md  group_navigation.md  group_services.md
docs/management/: README.md
docs/meta/: README.md
docs/ru_RU/: README.md
html_prototype/: 500.html  brows.html  contacts.html  cosmetology.html  datenschutz.html  depilation.html  hair.html  impressum.html  massage.html  nails.html  services.html  team.html
html_prototype/css/: base.css  layout.css  pages.css
html_prototype/ru/: brows.html  contacts.html  cosmetology.html  depilation.html  hair.html  index.html  massage.html  nails.html  services.html  team.html
logs/backend/: errors.json
logs/telegram_bot/: errors.json
scratch/: build_service_fixtures.py  check_pydantic.py  clean_fixtures.py  current_services_compact.json  debug_tests.py  wizard_fail.txt
scripts/: README.md  generate_project_tree.py  init_db_schemas.sql  lint_docs.py
src/: README.md
src/backend-django/: .env.example  README.md  manage.py
src/backend-fastapi/: alembic.ini  main.py  requirements.txt  router.py
src/backend_django/: .env.example  conftest.py  db (1).sqlite3  fix_po_languages.py
src/lily_backend/: conftest.py  initial_services_temp.json  manage.py
src/telegram_bot/: FLOW.md  ai_context.md  app_telegram.py  manage.py
src/worker_arq/: bot_worker.py
tests/: conftest.py
tests/factories/: __init__.py  booking.py  main.py  system.py
tests/lily_backend/: conftest.py
tools/: README.md  css_compiler.py  dump_by_model.py  fix_font_fallback.py  make_booking_fixtures.py  make_system_fixtures.py  migrate_locale.py  migration_agent.py
tools/debug/: debug_sync.py
tools/dev/: README.md  check.py  check_local.ps1  generate_project_tree.py  graphify_wiki.ps1  graphify_wiki.py  preview_emails.py
tools/init_project/: add_module.py  config.py  runner.py
tools/media/: generate_flyer_pdf.py  qr_generator.py  qr_style.py  resize_image.py
tools/static/: css_compiler.py
(+1930 files in other folders)
