[project]
name = "lily_website"
version = "1.9.0"
description = ""
authors = [
    {name = "CodexDLC",email = "primecodex@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"

# Общие зависимости — всегда включены
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=5.2.1,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "django-modeltranslation (>=0.19.19,<0.20.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "holidays (>=0.63)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "aiosmtplib (>=3.0.1,<4.0.0)",
    "django-unfold (>=0.79.0,<0.80.0)",
    "segno (>=1.6.6,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "src" }
]

# === Группы зависимостей ===

# Библиотека Codex Tools (Движки и универсальные утилиты)
[tool.poetry.group.codex_tools.dependencies]
arq = ">=0.27.0,<0.28.0"
pydantic = ">=2.0.0"

# Технические зависимости, общие для разных сервисов
[tool.poetry.group.shared.dependencies]
twilio = "^9.10.2"
tabulate = "^0.9.0"
requests = "^2.32.3"
charset-normalizer = "^3.4.4"

[tool.poetry.group.django.dependencies]
django = ">=5.2.12,<6.0"
python-dotenv = ">=1.0.0,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
dj-database-url = ">=2.3.0,<3.0.0"
gunicorn = ">=23.0.0,<24.0.0"
django-ninja = ">=1.3.0,<2.0.0"
django-redis = ">=5.4.0,<6.0.0"
django-prometheus = ">=2.3.1,<3.0.0"
django-ratelimit = "^4.1.0"

[tool.poetry.group.bot.dependencies]
aiogram = ">=3.24.0,<4.0.0"
aiogram-i18n = ">=1.4.0,<2.0.0"
"fluent.runtime" = ">=0.4.0,<0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-django = "*"
pytest-cov = ">=5.0.0,<7.0.0"
pre-commit = "*"
qrcode = ">=7.0,<8.0"
djlint = "^1.36.4"
pip-audit = "*"
bandit = "*"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# === Ruff ===
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# === Mypy ===
[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
disable_error_code = ["call-arg"]

# === Pytest ===
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [".", "src/backend_django"]
DJANGO_SETTINGS_MODULE = "core.settings.test"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
addopts = "--cov=src/backend_django --cov-report=term-missing --cov-report=html:htmlcov --ignore=src/backend_django/features/cabinet/tests/test_email_notifications.py"

# === Coverage ===
[tool.coverage.run]
source = ["src/backend_django"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings/*",
    "*/fixtures/*",
    "*/management/commands/*",
    "*/admin.py",
    "*/apps.py",
    "*/translation.py",
    # Cabinet will be fully rewritten in v2.0 — skip from coverage
    "*/features/cabinet/*",
    # V2 booking flow will be rewritten — business logic not yet stable
    "*/features/booking/services/v2_booking_service.py",
    "*/features/booking/views/v2_wizard.py",
    "*/features/booking/selectors/wizard_v2.py",
    "*/features/booking/selectors/wizard.py",
    # API layer will change with V2 rebind
    "*/api/booking.py",
    # Django adapter is integration glue, requires full stack
    "*/codex_tools/booking/adapters/django_adapter.py",
    # Infrastructure that requires live services (Redis, ARQ)
    "*/redis_managers/*",
    "*/core/arq/*",
    "*/codex_tools/common/arq_client.py",
    # Sitemaps — SEO infrastructure, no business logic
    "*/core/sitemaps.py",
    # Dashboard refresh — background job infrastructure
    "*/features/system/services/dashboard_refresh_service.py",
    # Signals and abstract interfaces — tested indirectly
    "*/signals.py",
    "*/codex_tools/booking/interfaces.py",
    # One-off utility, not part of main flow
    "*/utils/fixture_hash.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# === djLint ===
[tool.djlint]
profile = "django"
ignore = "H006,H030,H031"
indent = 2
use_fast_extend = true
preserve_leading_space = true
preserve_blank_lines = true
line_break_after_multiline_tag = true
custom_html = "true"

# === Bandit ===
[tool.bandit]
exclude_dirs = ["tests", "features/*/tests", "tools"]
targets = ["src"]
skips = ["B101", "B308", "B703"]

# === pip-audit: known pre-existing CVEs in transitive deps (not our code) ===
[tool.pip-audit]
ignore-vulns = [
    "CVE-2026-4539",   # pygments — transitive dep, no fix yet
    "CVE-2026-25645",  # requests — transitive dep, fix available via bump
]
