[project]
name = "lily_website"
version = "2.2.0"
description = ""
authors = [
    {name = "CodexDLC",email = "primecodex@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

# Общие зависимости — всегда включены
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "redis (>=5.2.1,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "django-modeltranslation (>=0.19.19,<0.20.0)",
    "pillow>=12.2.0",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "holidays (>=0.63)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "aiosmtplib (>=3.0.1,<4.0.0)",
    "django-unfold (>=0.79.0,<0.80.0)",
    "segno (>=1.6.6,<2.0.0)",
    "django>=5.2.13",
    "aiohttp>=3.13.4",
    "anthropic>=0.87.0",
    "cryptography>=46.0.7",
    "pytest>=9.0.3",
    "poetry>=2.3.3",
]

[dependency-groups]
codex_tools = [
    "arq>=0.27.0,<0.28.0",
    "pydantic>=2.0.0",
    "codex-core>=0.3.0,<0.9.0",
]
worker = [
    "twilio>=9.10.2,<10.0.0",
    "codex-platform[all]>=0.3.0,<0.9.0",
    { include-group = "codex_tools" },
]
django = [
    "django>=5.2.13,<6.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "dj-database-url>=2.3.0,<3.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "django-ninja>=1.3.0,<2.0.0",
    "django-prometheus>=2.3.1,<3.0.0",
    "django-ratelimit>=4.1.0,<5.0.0",
    "requests>=2.33.1,<3.0.0",
    "codex-django==0.5.3",
    { include-group = "codex_tools" },
]
bot = [
    "aiogram>=3.24.0,<4.0.0",
    "aiogram-i18n>=1.4.0,<2.0.0",
    "codex-bot>=0.2.1,<0.9.0",
    "codex-platform[streams]>=0.3.0,<0.9.0",
    "fluent.runtime>=0.4.0,<0.5.0",
    { include-group = "codex_tools" },
]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-django",
    "pytest-cov>=5.0.0,<7.0.0",
    "pre-commit",
    "qrcode>=7.0,<8.0",
    "djlint>=1.36.4,<2.0.0",
    "pip-audit",
    "bandit[toml]",
    "types-requests>=2.32.4.20260107,<3.0.0",
    "codex-services[calendar]>=0.1.3,<0.9.0",
    "codex-django-cli>=0.3.0,<0.9.0",
    { include-group = "django" },
    { include-group = "bot" },
    { include-group = "worker" },
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
default-groups = ["dev"]

# === Ruff ===
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# === Mypy ===
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
disable_error_code = ["call-arg"]

# === Pytest ===
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
DJANGO_SETTINGS_MODULE = "core.settings.test"
pythonpath = ["src/lily_backend", "src", "."]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
addopts = "--tb=short --cov --cov-report=term-missing --cov-report=html:htmlcov"

# === Coverage ===
[tool.coverage.run]
source = ["src/lily_backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings/*",
    "*/fixtures/*",
    "*/management/commands/*",
    "*/admin.py",
    "*/apps.py",
    "*/translation.py",
    # Infrastructure & SEO
    "*/core/sitemaps.py",
    "*/signals.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# === djLint ===
[tool.djlint]
profile = "django"
ignore = "H006,H030,H031"
indent = 2
use_fast_extend = true
preserve_leading_space = true
preserve_blank_lines = true
line_break_after_multiline_tag = true
custom_html = "true"

# === Bandit ===
[tool.bandit]
exclude_dirs = ["tests", "tools"]
targets = ["src/lily_backend"]
skips = ["B101", "B308", "B703"]

# === pip-audit: known pre-existing CVEs in transitive deps (not our code) ===
[tool.pip-audit]
ignore-vulns = [
    "CVE-2026-4539",   # pygments — transitive dep, no fix yet
    "CVE-2026-25645",  # requests — transitive dep, fix available via bump
]

# === Quality Gate ===
[tool.codex-check]
project-name = "Lily"
quality-command = "pre-commit run --all-files"
audit-flags = "--skip-editable"
integration-requires = "Mailpit"
test-stages = ["unit", "integration"]
prompt-test-stages = ["unit", "integration"]
live-output-test-stages = ["unit", "integration"]
test-paths = ["tests/lily_backend"]
test-markers = { unit = "not integration" }
types-paths = ["src/lily_backend", "tools"]
